# covet

./: .dockerignore  .gitignore  .travis.yml  COPYRIGHT  Cargo.toml  Dockerfile.build-deb  README.md  Vagrantfile  build.rs  build_deb.sh  make_release.sh  podman_build_deb.sh
.github/: dependabot.yml
.github/workflows/: build.yml  debian-package.yml  release.yml
debian/: control  copyright  covet.bash-completion  covet.default  covet.init  covet.install  covet.logrotate  covet.service  dirs  postinst  postrm  rules
doc/: jpeg.md
doc/hpenvy/: 01-ScanStatus.md  02-ScanJob.md  03-JobStatus.md  ScanJob.md
frontend/: README.md  biome.json  build.ts  index.ts  package.json  tsconfig.json
frontend/src/: index.html  index.ts  style.css
src/: cli.rs  error.rs  job_status.rs  jpeg.rs  main.rs  scan_job.rs  scan_status.rs  scanjob.rs  scanner.rs  scanstatus.rs  util.rs  web.rs
src/message/: error.rs  job_status.rs  mod.rs  scan_job.rs  scan_status.rs  util.rs
src/resources/: error.html  index.html  index.js  style.css
src/web/: mod.rs  static_content.rs
