[package]
name = "covet"
version = "1.4.0"
authors = ["Armin Häberling <armin.aha@gmail.com>"]
build = "build.rs"
edition = "2018"

description = "CLI and web frontend for scanning with HP Envy printer / scanners"
repository = "https://github.com/arminha/covet"

readme = "README.md"
categories = ["command-line-utilities"]
license = "GPL-3.0-or-later"

include = [
  "Cargo.toml",
  "Cargo.lock",
  "src/**/*",
  "build.rs",
  "README.md",
  "LICENSE"
]

[badges]
maintenance = { status = "passively-maintained" }

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1

[build-dependencies]
clap = { version = "4.5.23", features = ["derive"] }
clap_complete = "4.5.38"

[dependencies]
anyhow = "1.0.93"
bytes = "1.9.0"
futures-util = { version = "0.3.31", default-features = false }
hyper = "1.5.2"
reqwest = { version = "0.12.11", features = ["stream"] }
thiserror = "2.0.3"
time = { version = "0.3.37", features = ["formatting", "macros"] }
tokio = { version = "1.42.0", features = ["fs", "rt-multi-thread", "time"] }
url = "2.5.4"
xmltree = "0.11.0"
xml-rs = "0.8.23"
# cli
clap = { version = "4.5.23", features = ["derive"] }
# web
base64 = "0.22.1"
sha2 = "0.10.8"
warp = { version = "0.3.7", default-features = false }
headers = "0.4.0"
log = "0.4.22"
env_logger = "0.11.5"
