[package]
name = "covet"
version = "1.4.0"
authors = ["Armin Häberling <armin.aha@gmail.com>"]
build = "build.rs"
edition = "2018"
rust-version = "1.74"

description = "CLI and web frontend for scanning with HP Envy printer / scanners"
repository = "https://github.com/arminha/covet"

readme = "README.md"
categories = ["command-line-utilities"]
license = "GPL-3.0-or-later"

include = [
  "Cargo.toml",
  "Cargo.lock",
  "src/**/*",
  "build.rs",
  "README.md",
  "LICENSE"
]

[badges]
maintenance = { status = "passively-maintained" }

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1

[build-dependencies]
clap = { version = "4.5.30", features = ["derive"] }
clap_complete = "4.5.45"

[dependencies]
anyhow = "1.0.95"
bytes = "1.10.0"
futures-util = { version = "0.3.31", default-features = false }
hyper = "0.14.32"
reqwest = { version = "0.11.27", features = ["stream"] }
thiserror = "2.0.11"
time = { version = "0.3.37", features = ["formatting", "macros"] }
tokio = { version = "1.43.0", features = ["fs", "rt-multi-thread", "time"] }
url = "2.5.4"
xmltree = "0.11.0"
xml-rs = "0.8.25"
# cli
clap = { version = "4.5.30", features = ["derive"] }
# web
base64 = "0.22.1"
sha2 = "0.10.8"
warp = { version = "0.3.7", default-features = false }
headers = "0.3.9"
log = "0.4.25"
env_logger = "0.11.6"
