[package]
name = "covet"
version = "1.4.0"
authors = ["Armin Häberling <armin.aha@gmail.com>"]
build = "build.rs"
edition = "2024"
rust-version = "1.85"

description = "CLI and web frontend for scanning with HP Envy printer / scanners"
repository = "https://github.com/arminha/covet"

readme = "README.md"
categories = ["command-line-utilities"]
license = "GPL-3.0-or-later"

include = [
    "Cargo.toml",
    "Cargo.lock",
    "src/**/*",
    "build.rs",
    "README.md",
    "LICENSE",
]

[badges]
maintenance = { status = "passively-maintained" }

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
debug = true
split-debuginfo = "packed"

[build-dependencies]
clap = { version = "4.5.48", features = ["derive"] }
clap_complete = "4.5.58"
serde = { version = "1.0.226", features = ["derive"] }

[dependencies]
anyhow = "1.0.100"
bytes = "1.10.1"
futures-util = { version = "0.3.31", default-features = false }
hyper = "1.7.0"
reqwest = { version = "0.12.23", features = ["stream"] }
thiserror = "2.0.16"
jiff = { version = "0.2.15", default-features = false, features = ["std"] }
tokio = { version = "1.47.1", features = ["fs", "rt-multi-thread", "time"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
url = "2.5.7"
xmltree = "0.11.0"
xml-rs = "0.8.27"
# cli
clap = { version = "4.5.48", features = ["derive", "wrap_help"] }
# web
axum = "0.8.5"
base64 = "0.22.1"
sha2 = "0.10.9"
headers = "0.4.1"
serde = { version = "1.0.226", features = ["derive"] }
tower-http = { version = "0.6.6", features = ["trace"] }
